--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "nativescript": {
     "id": "org.nativescript.nsnggridviewmemoryleak",
     "tns-android": {
-      "version": "2.2.0"
+      "version": "2.3.0"
     }
   },
   "dependencies": {
@@ -22,7 +22,7 @@
     "nativescript-angular": "^0.3.0",
     "reflect-metadata": "^0.1.5",
     "rxjs": "5.0.0-beta.6",
-    "tns-core-modules": "2.2.1",
+    "tns-core-modules": "^2.3.0",
     "zone.js": "0.6.14"
   },
   "devDependencies": {
